# moist

./: .doxyfile  .gitmodules  0.tiff  CMakeLists.txt  README.md  a_after_edge_insertion.msh  a_after_vertex_clustering.msh  a_after_vertex_insertion.msh  b_after_edge_insertion.msh  b_after_vertex_clustering.msh  b_after_vertex_insertion.msh  cube10x10_above_marked  test.csv  test.tif
cmake/: FindGMP.cmake  FindMMG3D.cmake  FindMPFR.cmake
danieldata_05.08/: aspect_ratio_histogram.csv  dihedral_angle_histogram.csv  face_angle_histogram.csv
src/: core.hpp  utils.hpp
src/core/: CMakeLists.txt  attributes.inl  core-interface.cpp  core-interface.hpp  core.hpp  geometry.inl  predicates.inl  utils.hpp
src/interface-generator/: CMakeLists.txt  interface-generator.cpp  interface-generator.hpp  main.cpp
src/interface-inserter/: CMakeLists.txt  local_operations.cpp  local_operations.hpp  main.cpp  ooc_mesh.cpp  ooc_mesh.hpp  vertex_clustering.hpp
src/interfacing/: CMakeLists.txt  geometry.inl  interface.cpp  interface.hpp  main.cpp  matching.cpp  matching.hpp  ooc_mesh.cpp  ooc_mesh.hpp  predicates.inl  vertex_clustering.hpp
src/merging/: .todo
src/moist/boundary-marker/: CMakeLists.txt  main.cpp
src/moist/core/: CMakeLists.txt  attributes.inl  core_interface.cpp  core_interface.hpp  core_slice.hpp  defines.hpp  descriptor.hpp  geometry.inl  mesh_quality.inl  metrics.cpp  metrics.hpp  metrics.inl  predicates.inl  slice_io.cpp  slice_io.hpp  timer.cpp  timer.hpp  utils.hpp
src/moist/interface-generator/: CMakeLists.txt  interface_generator.cpp  interface_generator.hpp  main.cpp
src/moist/interface-inserter/: CMakeLists.txt  arrangement.cpp  arrangement.hpp  exact_mesh.cpp  exact_mesh.hpp  exact_types.hpp  geometry_exact.inl  interface_inserter.cpp  interface_inserter.hpp  interface_inserter_old.cpp  interface_inserter_old.hpp  local_operations.cpp  local_operations.hpp  lookup_grid.cpp  lookup_grid.hpp  main.cpp  merger.cpp  merger.hpp  new_predicates.inl  remeshing.cpp  remeshing.hpp  slice.cpp  slice.hpp  slice_exact.cpp  tetgen_utils.cpp  tetgen_utils.hpp
src/moist/submesh-decimator/: CMakeLists.txt  main.cpp
src/moist/submesh-merger/: CMakeLists.txt  main.cpp  submesh_merger.cpp  submesh_merger.hpp
src/moist/surface-extractor/: CMakeLists.txt  main.cpp  surface_generator.cpp  surface_generator.hpp  tiff_data.cpp  tiff_data.hpp
src/moist/surface-extractor/sizing-field/: scalar_field.cu  scalar_field.hpp  utils.cuh
src/sizing/: CMakeLists.txt  main.cpp  scalar_field.cu  scalar_field.hpp  tiff_data.cpp  tiff_data.hpp  utils.cuh
src/surface-extractor/: CMakeLists.txt  main.cpp  surface_generator.cpp  surface_generator.hpp  tiff_data.cpp  tiff_data.hpp
src/surface-extractor/mc33/include/: MC33.h
src/surface-extractor/sizing-field/: scalar_field.cu  scalar_field.hpp  utils.cuh
src/surfacing/: .todo
src/tests/: CMakeLists.txt  inserter_test.gtest.cpp  merger_test.gtest.cpp  test_utils.cpp  test_utils.hpp
src/tests/data/fixtures/: core_group.csv
src/tests/fixtures/: core_group.def.hpp
test/: cube.mesh  cube_1x1.mesh  cube_2x2.mesh  cylinder.mesh  cylinder_offset.mesh
test/raw/: 1.tif  2.tif  3.tif  4.tif  5.tif  6.tif  7.tif  8.tif  9.tif
utils/scripts/: cases_coarsening.csv  generate_surfaces.bash  generate_volumes.bash  run_coarsening.bash  run_insertion.bash  stash
workflow/: example.nf
